--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "latihan membuat backend",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.3"
   },
   "devDependencies": {},
   "scripts": {
